--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<div class="wrapper">
 <!--	HeaderNav-->
 		<nav class="mainNav">
-		<img src="https://source.unsplash.com/random/200x100" alt="">
+		
 			<ul>
-			
+			<img src="https://source.unsplash.com/random/200x100" alt="">
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Skills</a></li>
 				<li><a href="#">Projects</a></li>
@@ -26,12 +26,10 @@
 			<header class="intro">
 				<h1>Welcome</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, suscipit.</p>
-				<a href="#" class="btn">Click Now!</a>
+				<a href="#" class="btn btn-primary">Click Now!</a>
+				<a href="#" class="btn btn-secondary">Click Now!</a>
 			</header>
-			<div class="sideGraphic">
-				<img src="https://source.unsplash.com/random/150x150" alt="">
-				<p>Lorem ipsum dolor sit amet.</p>
-			</div>
+
 		</section>
 <!--		Main Content -->
 <section class="main">
@@ -41,7 +39,7 @@
 </section>
 <!--SKills box-->
 <section class="skillBoxes">
-
+	
 	<div class="card">
 		<i class="fab fa-html5 fa-4x"></i>
     		<h3>HTML 5</h3>
@@ -80,14 +78,16 @@
 
 </section>
 <footer>
-	&copy; Brian Pajak 2018
+	
 	<div class="social">
+	<h2>Get In Touch</h2>
 		<a href="mailto:brianj.pajak@gmail.com"><i class="fas fa-envelope-square fa-4x"></i></a>
 		<a href="https://github.com/MasterKrepta"><i class="fab fa-github-square fa-4x"></i></a>
 		<a href="https://www.youtube.com/channel/UCHhQPUvD1GWy1wEommajuDQ?"><i class="fab fa-youtube-square fa-4x"></i></a>
 		<a href="https://twitter.com/masterkrepta"><i class="fab fa-twitter-square fa-4x"></i></a>
 		
 	</div>
+	&copy; Brian Pajak 2018
 </footer>
 	</div> <!-- End of Wrapper -->
 </body>
