--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<div class="wrapper">
 <!--	HeaderNav-->
 		<nav class="mainNav">
-		
 			<ul>
 			<img src="https://source.unsplash.com/random/200x100" alt="">
 				<li><a href="#">Home</a></li>
@@ -33,46 +32,49 @@
 		</section>
 <!--		Main Content -->
 <section class="main">
-	<h2>Lorem ipsum dolor sit amet, consectetur.</h2>
-	<img src="https://source.unsplash.com/random/200x200" alt="">
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quia adipisci, cupiditate provident iusto odit soluta dignissimos omnis libero voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore repellendus, animi rem libero adipisci, doloremque magni vero numquam rerum id eum soluta quas sapiente earum eveniet nulla. Vitae, repellat. Minus soluta, ad doloribus eveniet repellat provident veniam praesentium adipisci doloremque. Maiores neque deleniti fugiat distinctio iusto, assumenda odio perferendis tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident eaque amet optio nisi aspernatur fugiat blanditiis, earum atque placeat temporibus.</p>
+	<h3>Lorem ipsum dolor sit amet, consectetur.</h3>
+	<div class="mainContent">
+	<img src="/ims/profile.png" alt="">
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quia adipisci, cupiditate provident iusto odit soluta dignissimos omnis libero voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore repellendus, animi rem libero adipisci, doloremque magni vero numquam rerum id eum soluta quas sapiente earum eveniet nulla. Vitae, repellat. Minus soluta, ad doloribus eveniet repellat provident veniam praesentium adipisci doloremque. Maiores neque deleniti fugiat distinctio iusto, assumenda odio perferendis tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident eaque amet optio nisi aspernatur fugiat blanditiis, earum atque placeat temporibus.</p>	
+	</div>
+	
 </section>
 <!--SKills box-->
 <section class="skillBoxes">
 	
 	<div class="card">
 		<i class="fab fa-html5 fa-4x"></i>
-    		<h3>HTML 5</h3>
+    		<h2>HTML 5</h2>
     		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
 	</div>
 	<div class="card">
 		<i class="fab fa-css3 fa-4x"></i>
-    		<h3>CSS3</h3>
+    		<h2>CSS3</h2>
     		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
 	</div>
 	<div class="card">
 		<i class="fab fa-js fa-4x"></i>
-    		<h3>JAVASCRIPT</h3>
+    		<h2>JAVASCRIPT</h2>
     		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
 	</div>
 	<div class="card">
 		<i class="fas fa-mobile-alt fa-4x"></i>
-    		<h3>RESPONSIVE DESIGN</h3>
+    		<h2>RESPONSIVE DESIGN</h2>
     		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
 	</div>	
 	<div class="card">
 		<i class="fas fa-pencil-alt fa-4x"></i>
-    		<h3>Graphic Design</h3>
+    		<h2>Graphic Design</h2>
     		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
 	</div>
 	<div class="card">
 		<i class="fas fa-code fa-4x"></i>
-    		<h3>C# Development</h3>
+    		<h2>C# Development</h2>
     		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
 	</div>
 	<div class="card">
 		<i class="fas fa-gamepad fa-4x"></i>
-    		<h3>Unity Game Development</h3>
+    		<h2>Unity Game Development</h2>
     		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
 	</div>
 
@@ -80,7 +82,7 @@
 <footer>
 	
 	<div class="social">
-	<h2>Get In Touch</h2>
+	<h3>Get In Touch</h3>
 		<a href="mailto:brianj.pajak@gmail.com"><i class="fas fa-envelope-square fa-4x"></i></a>
 		<a href="https://github.com/MasterKrepta"><i class="fab fa-github-square fa-4x"></i></a>
 		<a href="https://www.youtube.com/channel/UCHhQPUvD1GWy1wEommajuDQ?"><i class="fab fa-youtube-square fa-4x"></i></a>
