--- a/index.html
+++ b/index.html
@@ -28,20 +28,25 @@
 				<a href="#" class="btn btn-primary">Click Now!</a>
 				<a href="#" class="btn btn-secondary">Click Now!</a>
 			</header>
-
+			<!-- Waka Time -->
+			<div class="wakaTime">
+				<a href="https://wakatime.com"><img src="https://wakatime.com/share/@8f9bc94d-521e-44ed-b8b9-509acd68938d/52f173a9-48c4-44c5-a940-df4b0dadbf32.png" /></a>
+			</div>
 		</section>
+
+
 <!--		Main Content -->
 <section class="main">
 	<h3>Lorem ipsum dolor sit amet, consectetur.</h3>
 	<div class="mainContent">
 	<img src="/ims/profile.png" alt="">
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quia adipisci, cupiditate provident iusto odit soluta dignissimos omnis libero voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore repellendus, animi rem libero adipisci, doloremque magni vero numquam rerum id eum soluta quas sapiente earum eveniet nulla. Vitae, repellat. Minus soluta, ad doloribus eveniet repellat provident veniam praesentium adipisci doloremque. Maiores neque deleniti fugiat distinctio iusto, assumenda odio perferendis tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident eaque amet optio nisi aspernatur fugiat blanditiis, earum atque placeat temporibus.</p>	
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quia adipisci, cupiditate provident iusto odit soluta dignissimos omnis libero voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore repellendus, animi rem libero adipisci, doloremque magni vero numquam rerum id eum soluta quas sapiente earum eveniet nulla. Vitae, repellat. Minus soluta, ad doloribus eveniet repellat provident veniam praesentium adipisci doloremque. Maiores neque deleniti fugiat distinctio iusto, assumenda odio perferendis tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident eaque amet optio nisi aspernatur fugiat blanditiis, earum atque placeat temporibus.</p>
 	</div>
-	
+
 </section>
 <!--SKills box-->
 <section class="skillBoxes">
-	
+
 	<div class="card">
 		<i class="fab fa-html5 fa-4x"></i>
     		<h2>HTML 5</h2>
@@ -61,7 +66,7 @@
 		<i class="fas fa-mobile-alt fa-4x"></i>
     		<h2>RESPONSIVE DESIGN</h2>
     		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
-	</div>	
+	</div>
 	<div class="card">
 		<i class="fas fa-pencil-alt fa-4x"></i>
     		<h2>Graphic Design</h2>
@@ -80,14 +85,14 @@
 
 </section>
 <footer>
-	
+
 	<div class="social">
 	<h3>Get In Touch</h3>
 		<a href="mailto:brianj.pajak@gmail.com"><i class="fas fa-envelope-square fa-4x"></i></a>
 		<a href="https://github.com/MasterKrepta"><i class="fab fa-github-square fa-4x"></i></a>
 		<a href="https://www.youtube.com/channel/UCHhQPUvD1GWy1wEommajuDQ?"><i class="fab fa-youtube-square fa-4x"></i></a>
 		<a href="https://twitter.com/masterkrepta"><i class="fab fa-twitter-square fa-4x"></i></a>
-		
+
 	</div>
 	&copy; Brian Pajak 2018
 </footer>
