more waka steup

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 				<h1>Welcome</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, suscipit.</p>
 				<a href="#" class="btn btn-primary">Click Now!</a>
-				<a href="#" class="btn btn-secondary">Click Now!</a>
+
 			</header>
 			<!-- Waka Time -->
 			<div class="wakaTime">
+				<p>I've Been Busy Lately</p>
 				<a href="https://wakatime.com"><img src="https://wakatime.com/share/@8f9bc94d-521e-44ed-b8b9-509acd68938d/52f173a9-48c4-44c5-a940-df4b0dadbf32.png" /></a>
 			</div>
 		</section>
@@ -72,11 +73,7 @@
     		<h2>Graphic Design</h2>
     		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
 	</div>
-	<div class="card">
-		<i class="fas fa-code fa-4x"></i>
-    		<h2>C# Development</h2>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
-	</div>
+
 	<div class="card">
 		<i class="fas fa-gamepad fa-4x"></i>
     		<h2>Unity Game Development</h2>
