--- a/index.html
+++ b/index.html
@@ -1,98 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/styles.css">
 	<title>Home Page || My Site Name</title>
 </head>
+
 <body>
 	<div class="wrapper">
-<!--	HeaderNav-->
+		<!--	HeaderNav-->
 		<nav class="mainNav">
 			<ul>
-			<img src="https://source.unsplash.com/random/200x100" alt="">
+				<img src="https://source.unsplash.com/random/200x100" alt="">
 				<li><a href="#">Home</a></li>
 				<li><a href="#">Skills</a></li>
 				<li><a href="#">Projects</a></li>
 				<li><a href="#">Social</a></li>
 			</ul>
 		</nav>
-<!--		Welcome Section -->
+		<!--		Welcome Section -->
 		<section class="welcome">
 			<header class="intro">
 				<h1>Welcome</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, suscipit.</p>
 				<a href="#" class="btn btn-primary">Click Now!</a>
-
 			</header>
-			<!-- Waka Time -->
-			<div class="wakaTime">
-				<p>I've Been Busy Lately</p>
-				<a href="https://wakatime.com"><img src="https://wakatime.com/share/@8f9bc94d-521e-44ed-b8b9-509acd68938d/52f173a9-48c4-44c5-a940-df4b0dadbf32.png" /></a>
-			</div>
+
 		</section>
+		<!--		Main Content -->
+		<section class="main">
+			<h3>Lorem ipsum dolor sit amet, consectetur.</h3>
+			<div class="mainContent">
+				<img src="/ims/profile.png" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quia adipisci, cupiditate provident iusto odit soluta dignissimos omnis libero voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore repellendus, animi rem libero
+					adipisci, doloremque magni vero numquam rerum id eum soluta quas sapiente earum eveniet nulla. Vitae, repellat. Minus soluta, ad doloribus eveniet repellat provident veniam praesentium adipisci doloremque. Maiores neque deleniti fugiat distinctio
+					iusto, assumenda odio perferendis tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident eaque amet optio nisi aspernatur fugiat blanditiis, earum atque placeat temporibus.</p>
+					<!-- Waka Time -->
 
+					<div class="wakaTime">
+						<p>I've Been Busy Lately</p>
+						<a href="https://wakatime.com"><img src="https://wakatime.com/share/@8f9bc94d-521e-44ed-b8b9-509acd68938d/52f173a9-48c4-44c5-a940-df4b0dadbf32.png" /></a>
+					</div>
+			</div>
 
-<!--		Main Content -->
-<section class="main">
-	<h3>Lorem ipsum dolor sit amet, consectetur.</h3>
-	<div class="mainContent">
-	<img src="/ims/profile.png" alt="">
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quia adipisci, cupiditate provident iusto odit soluta dignissimos omnis libero voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore repellendus, animi rem libero adipisci, doloremque magni vero numquam rerum id eum soluta quas sapiente earum eveniet nulla. Vitae, repellat. Minus soluta, ad doloribus eveniet repellat provident veniam praesentium adipisci doloremque. Maiores neque deleniti fugiat distinctio iusto, assumenda odio perferendis tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident eaque amet optio nisi aspernatur fugiat blanditiis, earum atque placeat temporibus.</p>
-	</div>
+		</section>
+		<!--SKills box-->
+		<section class="skillBoxes">
+			<div class="card">
+				<i class="fab fa-html5 fa-4x"></i>
+				<h2>HTML 5</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
+			</div>
+			<div class="card">
+				<i class="fab fa-css3 fa-4x"></i>
+				<h2>CSS3</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
+			</div>
+			<div class="card">
+				<i class="fab fa-js fa-4x"></i>
+				<h2>JAVASCRIPT</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
+			</div>
+			<div class="card">
+				<i class="fas fa-mobile-alt fa-4x"></i>
+				<h2>RESPONSIVE DESIGN</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
+			</div>
+			<div class="card">
+				<i class="fas fa-pencil-alt fa-4x"></i>
+				<h2>Graphic Design</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
+			</div>
 
-</section>
-<!--SKills box-->
-<section class="skillBoxes">
+			<div class="card">
+				<i class="fas fa-gamepad fa-4x"></i>
+				<h2>Unity Game Development</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
+			</div>
 
-	<div class="card">
-		<i class="fab fa-html5 fa-4x"></i>
-    		<h2>HTML 5</h2>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
-	</div>
-	<div class="card">
-		<i class="fab fa-css3 fa-4x"></i>
-    		<h2>CSS3</h2>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
-	</div>
-	<div class="card">
-		<i class="fab fa-js fa-4x"></i>
-    		<h2>JAVASCRIPT</h2>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
-	</div>
-	<div class="card">
-		<i class="fas fa-mobile-alt fa-4x"></i>
-    		<h2>RESPONSIVE DESIGN</h2>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
-	</div>
-	<div class="card">
-		<i class="fas fa-pencil-alt fa-4x"></i>
-    		<h2>Graphic Design</h2>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
-	</div>
+		</section>
+		<footer>
 
-	<div class="card">
-		<i class="fas fa-gamepad fa-4x"></i>
-    		<h2>Unity Game Development</h2>
-    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, rerum?</p>
+			<div class="social">
+				<h3>Get In Touch</h3>
+				<div class="icons">
+					<a href="mailto:brianj.pajak@gmail.com"><i class="fas fa-envelope-square fa-4x"></i></a>
+					<a href="https://github.com/MasterKrepta"><i class="fab fa-github-square fa-4x"></i></a>
+					<a href="https://twitter.com/masterkrepta"><i class="fab fa-twitter-square fa-4x"></i></a>
+					<a href="https://www.youtube.com/channel/UCHhQPUvD1GWy1wEommajuDQ?"><i class="fab fa-youtube-square fa-4x"></i></a>
+				</div>
+				<p>&copy; Brian Pajak 2018</p>
+			</div>
+
+		</footer>
 	</div>
-
-</section>
-<footer>
-
-	<div class="social">
-	<h3>Get In Touch</h3>
-		<a href="mailto:brianj.pajak@gmail.com"><i class="fas fa-envelope-square fa-4x"></i></a>
-		<a href="https://github.com/MasterKrepta"><i class="fab fa-github-square fa-4x"></i></a>
-		<a href="https://www.youtube.com/channel/UCHhQPUvD1GWy1wEommajuDQ?"><i class="fab fa-youtube-square fa-4x"></i></a>
-		<a href="https://twitter.com/masterkrepta"><i class="fab fa-twitter-square fa-4x"></i></a>
-
-	</div>
-	&copy; Brian Pajak 2018
-</footer>
-	</div> <!-- End of Wrapper -->
+	<!-- End of Wrapper -->
 </body>
+
 </html>
