--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 		<section class="main">
 			<h3>Lorem ipsum dolor sit amet, consectetur.</h3>
 			<div class="mainContent">
-				<img src="/ims/profile.png" alt="">
+				<img src= "ims/profile.png" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quia adipisci, cupiditate provident iusto odit soluta dignissimos omnis libero voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore repellendus, animi rem libero
 					adipisci, doloremque magni vero numquam rerum id eum soluta quas sapiente earum eveniet nulla. Vitae, repellat. Minus soluta, ad doloribus eveniet repellat provident veniam praesentium adipisci doloremque. Maiores neque deleniti fugiat distinctio
 					iusto, assumenda odio perferendis tempora.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident eaque amet optio nisi aspernatur fugiat blanditiis, earum atque placeat temporibus.</p>
-					<!-- Waka Time -->
-
-					<div class="wakaTime">
-						<p>I've Been Busy Lately</p>
-						<a href="https://wakatime.com"><img src="https://wakatime.com/share/@8f9bc94d-521e-44ed-b8b9-509acd68938d/52f173a9-48c4-44c5-a940-df4b0dadbf32.png" /></a>
-					</div>
 			</div>
+
+		</section>
+							<!-- Waka Time -->
+		<section class="wakaTime">
+			<p>I've Been Busy Lately</p>
+			<a href="https://wakatime.com"><img src="https://wakatime.com/share/@8f9bc94d-521e-44ed-b8b9-509acd68938d/52f173a9-48c4-44c5-a940-df4b0dadbf32.png" /></a>
 
 		</section>
 		<!--SKills box-->
@@ -98,7 +98,7 @@
 
 		</footer>
 	</div>
-	<!-- End of Wrapper -->
+	</div><!-- End of Wrapper -->
 </body>
 
 </html>
